# kangaszuru

./: Cargo.toml  README.md
src/: main.rs  miniflux.rs  miniflux_transfer.rs  szurubooru.rs  szurubooru_upload.rs
